--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react-native": "^0.20.0"
+    "@exponent/react-native-navigator": "^0.4.2",
+    "react-native": "^0.20.0",
+    "react-native-button": "^1.4.2"
   }
 }
