--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@exponent/react-native-navigator": "^0.4.2",
     "react-native": "^0.20.0",
-    "react-native-button": "^1.4.2"
+    "react-native-button": "^1.4.2",
+    "react-native-picker": "^2.0.5"
   }
 }
